fixed mobile version spacing

--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -2,7 +2,6 @@
   .header {
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
-    gap: 15px;
     padding: var(--padding-mobile);
   }
 
@@ -56,7 +55,7 @@
   }
 }
 
-@media (width < 1024px) {
+@media (768px <= width < 1024px) {
   .header__theme-menu {
     display: flex;
     justify-content: end;
